generator client {
  provider = "prisma-client-js"
}

datasource db {
  provider = "postgresql"
  url      = env("DATABASE_URL")
}

enum TaskStatus {
  open
  done
  archived
}

enum TaskPriority {
  low
  medium
  high
}

enum SuggestionStatus {
  pending
  accepted
  rejected
  snoozed
  undone
}

enum StudyVariant {
  baseline
  adaptive
}

model User {
  id               String           @id @default(cuid())
  pseudonym        String           @unique
  studyModeEnabled Boolean          @default(true)
  createdAt        DateTime         @default(now())

  tasks            Task[]
  taskInteractions TaskInteraction[]
  suggestions      AdaptiveSuggestion[]
  preferences      UserPreference[]
  studySessions    StudySession[]
  eventLogs        EventLog[]
}

model Task {
  id               String            @id @default(cuid())
  userId           String
  studySessionId   String?
  title            String
  description      String?
  status           TaskStatus        @default(open)
  priority         TaskPriority      @default(medium)
  dueDate          DateTime?
  reminderAt       DateTime?
  listName         String?
  tags             String[]          @default([])
  estimatedMinutes Int?
  createdAt        DateTime          @default(now())
  updatedAt        DateTime          @updatedAt
  completedAt      DateTime?

  user             User              @relation(fields: [userId], references: [id], onDelete: Cascade)
  studySession     StudySession?     @relation(fields: [studySessionId], references: [id], onDelete: SetNull)
  interactions     TaskInteraction[]

  @@index([userId, status, dueDate])
  @@index([userId, studySessionId])
}

model TaskInteraction {
  id               String   @id @default(cuid())
  userId           String
  studySessionId   String?
  taskId           String?
  type             String
  metadata  Json     @default(dbgenerated("'{}'::jsonb"))
  createdAt DateTime @default(now())

  user           User          @relation(fields: [userId], references: [id], onDelete: Cascade)
  studySession   StudySession? @relation(fields: [studySessionId], references: [id], onDelete: SetNull)
  task           Task?         @relation(fields: [taskId], references: [id], onDelete: SetNull)

  @@index([userId, createdAt])
  @@index([taskId, createdAt])
  @@index([userId, studySessionId])
}

model AdaptiveRule {
  id          String   @id @default(cuid())
  key         String   @unique
  name        String
  description String
  enabled     Boolean  @default(true)
  createdAt   DateTime @default(now())

  suggestions AdaptiveSuggestion[] @relation("RuleSuggestions")
}

model AdaptiveSuggestion {
  id               String           @id @default(cuid())
  userId           String
  studySessionId   String?
  ruleKey          String
  type        String
  title       String
  explanation String
  status      SuggestionStatus @default(pending)
  payload     Json             @default(dbgenerated("'{}'::jsonb"))
  createdAt   DateTime         @default(now())
  respondedAt DateTime?

  user           User             @relation(fields: [userId], references: [id], onDelete: Cascade)
  studySession   StudySession?    @relation(fields: [studySessionId], references: [id], onDelete: SetNull)
  rule           AdaptiveRule     @relation("RuleSuggestions", fields: [ruleKey], references: [key], onDelete: Restrict)

  @@index([userId, status, createdAt])
  @@index([ruleKey, status])
  @@index([userId, studySessionId])
}

model UserPreference {
  id        String   @id @default(cuid())
  userId    String
  key       String
  value     Json     @default(dbgenerated("'{}'::jsonb"))
  createdAt DateTime @default(now())
  updatedAt DateTime @updatedAt

  user      User     @relation(fields: [userId], references: [id], onDelete: Cascade)

  @@unique([userId, key])
}

model StudySession {
  id          String       @id @default(cuid())
  userId      String
  sessionCode String       @unique
  startedAt   DateTime     @default(now())
  endedAt     DateTime?
  variant     StudyVariant?
  notes       String?

  user           User                 @relation(fields: [userId], references: [id], onDelete: Cascade)
  eventLogs      EventLog[]
  tasks          Task[]
  suggestions    AdaptiveSuggestion[]
  interactions   TaskInteraction[]

  @@index([userId, startedAt])
}

model EventLog {
  id        String       @id @default(cuid())
  userId    String
  sessionId String?
  eventType String
  screen    String
  metadata  Json         @default(dbgenerated("'{}'::jsonb"))
  createdAt DateTime     @default(now())

  user      User         @relation(fields: [userId], references: [id], onDelete: Cascade)
  session   StudySession? @relation(fields: [sessionId], references: [id], onDelete: SetNull)

  @@index([userId, createdAt])
  @@index([sessionId, createdAt])
}
